kubeflow-v0.6/asi/auth-istio-dex/base/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: authn-filter
  namespace: kubeflow
spec:
  workloadLabels:
    #include namespace in the label to avoid clashes across namespaces
    istio: ingressgateway
  filters:
    - filterConfig:
        failureModeAllow: false
        httpService:
          serverUri:
            uri: http://authservice.$(namespace).svc.$(clusterDomain)
            cluster: outbound|8080||authservice.$(namespace).svc.$(clusterDomain)
            timeout: 10s
          authorizationRequest:
            allowedHeaders:
              patterns:
                - exact: "cookie"
          authorizationResponse:
            allowedUpstreamHeaders:
              patterns:
                - exact: "$(userid-header)"
        statusOnError:
          code: GatewayTimeout
      filterName: envoy.ext_authz
      filterType: HTTP
      insertPosition:
        index: FIRST
      listenerMatch:
        portNumber: 80
        listenerType: GATEWAY
