kubeflow-v0.6/asi/auth-istio-dex/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 5556
        name: http-dex
        protocol: HTTP
      hosts:
        - "$(kfHost)"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "$(kfHost)"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtual-services
  namespace: kubeflow
spec:
  hosts:
    - "$(kfHost)"
  gateways:
    - kubeflow-gateway
  http:
    - match:
        - port: 5556
      route:
        - destination:
            port:
              number: 5556
            host: $(dexHost)
